# pkenya-models

./: .gitignore  .python-version  pyproject.toml  setup.cfg
pkenya_models/apps/: __init__.py
pkenya_models/apps/models/: __init__.py
pkenya_models/apps/models/commerce/: accountant.py
pkenya_models/apps/models/engineering/: architecture.py  engineer.py
pkenya_models/apps/models/health/: clinicians.py  medics.py  pharmacy.py
pkenya_models/models/commerce/: accountant.py
pkenya_models/models/health/: medics.py
pkenya_models/models/law/: advocate.py
